--- a/all.config
+++ b/all.config
@@ -49,3 +49,17 @@ checkout = git clone http://www.github.com/labkey/premium.git --branch develop
 [server/optionalModules/argos_test]
 checkout = git clone http://www.github.com/labkey/argos_test.git --branch develop
 
+[server/optionalModules/saml]
+checkout = git clone http://www.github.com/labkey/saml.git --branch develop
+
+[server/optionalModules/cas]
+checkout = git clone http://www.github.com/labkey/cas.git --branch develop
+
+[server/optionalModules/duo]
+checkout = git clone http://www.github.com/labkey/duo.git --branch develop
+
+[server/optionalModules/oauth]
+checkout = git clone http://www.github.com/labkey/oauth.git --branch develop
+
+[server/optionalModules/synonym]
+checkout = git clone http://www.github.com/labkey/synonym.git --branch develop
