--- a/argos.config
+++ b/argos.config
@@ -12,3 +12,7 @@ checkout = git clone http://www.github.com/labkey/workflow.git --branch develop
 
 [server/optionalModules/nlp]
 checkout = git clone https://github.com/LabKey/nlp.git --branch develop
+
+[server/optionalModules/compliance]
+checkout = git clone 'https://www.github.com/LabKey/compliance' 'compliance' --branch develop
+
