--- a/all.config
+++ b/all.config
@@ -63,3 +63,7 @@ checkout = git clone http://www.github.com/labkey/oauth.git --branch develop
 
 [server/optionalModules/synonym]
 checkout = git clone http://www.github.com/labkey/synonym.git --branch develop
+
+[server/optionalModules/compliance]
+checkout = git clone https://www.github.com/LabKey/compliance.git --branch develop
+
