--- a/argos.config
+++ b/argos.config
@@ -16,3 +16,7 @@ checkout = git clone https://github.com/LabKey/nlp.git --branch develop
 [server/optionalModules/compliance]
 checkout = git clone 'https://www.github.com/LabKey/compliance' 'compliance' --branch develop
 
+[server/optionalModules/complianceactivities]
+checkout = git clone 'https://www.github.com/LabKey/complianceactivities' 'complianceactivities' --branch develop
+
+
